@@ -64,6 +64,7 @@ class esp32can : public canbus
 
   protected:
     esp_err_t WriteFrame(const CAN_frame_t* p_frame);
+    void BusTicker10(std::string event, void* data);
 
   public:
     void SetPowerMode(PowerMode powermode);
